fix mobile overflow

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -43,10 +43,12 @@
     }
 
     .header__link-menu {
-        padding: 1rem 4rem 1rem 3rem;
+        padding: 1rem 4rem;
+        padding-left: 3rem;
     
         @include for-phone-only {
-            padding: 1rem 3rem;
+            padding: 1rem 1.5rem;
+            padding-left: 3rem;
         }
     }
 
