--- a/src/routes/Home/styles.scss
+++ b/src/routes/Home/styles.scss
@@ -84,10 +84,13 @@
 
     .parallax {
         position: absolute;
+        top: 0;
         height: calc(100vh - 7rem);
         width: 100%;
+        padding-top: 7rem;
 
         z-index: -1;
+        overflow: hidden;
 
         .layer {
             height: 100%;
